--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mailgun-js": "^0.22.0",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
     "path": "^0.12.7",
     "razorpay": "^2.0.6"
   }
