Adds .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 
 Razor_KeyID=
-Razor_KeySecret=
+Razor_ KeySecret=
 
 Mailgun_key=
 Mailgun_URL=
 
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=System@123
-DB_NAME=societydb
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
